@@ -1,7 +1,9 @@
-AUX graylog2.initd-r1 1222 RMD160 bf37d0dfefdf828760e04b8022db1a4ecfd4148e SHA1 f66a04af086f67c9a1ff5b4f0c1cc2f24ff87fec SHA256 2f9256aa7f81b3b1d03debdab456ae078d35f31662c09c8f12f92001b428599f
-AUX graylog2.initd-r2 1300 RMD160 39b40ec70ca61d23252ebebeb874631718ecbbe8 SHA1 9069af0a1a663d25ea77e820b54610012be7a6d4 SHA256 fcc2a852af707122f3ad391492e13c43ceb4081c0d96a282f60000d1c51c2d18
-DIST graylog2-server-0.9.4p1.tar.gz 445411 RMD160 050f7bc672dc988c4281bb584a8aaee9cdeeca1c SHA1 77841189f2e7cfa560446ecf5752736d66270985 SHA256 c29ef01766dbda9b0418a32cc384680273de7fea48b984f9c5eb7f288356a5a0
-EBUILD graylog2-0.9.4_p1-r1.ebuild 1183 RMD160 f5f515069dd97978ed96312af2b9277d6a70e7c0 SHA1 803a92d9b5548f66d4389ddc00aee66871a4af24 SHA256 2b75b133dfed7d8cbe354a412e920ecd62d2577b2ed9d7b6b24c92ce7d1d7600
-EBUILD graylog2-0.9.4_p1.ebuild 798 RMD160 df35520fe6658b95d675476fe2df9031d5511049 SHA1 a5878e9f13d1d687b8c53cb19b6e8452c00a9cae SHA256 1d77b70cbaaa6e985054f4205688d87cf4463c49132aba6a3efb88f7ba2c0604
-MISC ChangeLog 1819 RMD160 bdf13c0e93df4f62ac57c99f0dad19c4cced8ee0 SHA1 0143973983165d82a129d01c7feba503c3371ff8 SHA256 ec5d60667c2c5fabb99af675421fb6dd05c42b7a4058428ab2a137f1b5e81172
-MISC metadata.xml 353 RMD160 0b8d345856c4f9b29deeacebfb2a23adb69cdd3f SHA1 8873d79ee3a8d36b07208729b37282ac421a1126 SHA256 24fc5e02d0ce10ab5cbc207c0ea06d4d0c0d88e8d7a316f0ac35dc6badc6b288
+AUX graylog2-0.9.6.confd 37 SHA256 b6c2974555a8f29ac77198f0b26f641e38a14ac24a3b6a8ef80aec34495d8da4 SHA512 04cfb948803a0069c2a1e93ce9234615fb6cba2891891942c7fcaa0d0f25b97df309d89140420326c3b96ad9343aed2bc5a4a9e966095a9080a598dc7d219d8d WHIRLPOOL c43b15bfa99fa57056795e790ea9606fdeb91ba5ef25b4f5cbec29c898f0a903d9f6fd03b0466d3f4b8d92f0581bc66d4a212b37da9d7c31db6fe6decdb1586d
+AUX graylog2-0.9.6.initd 1320 SHA256 7d0f1537d6d4397a08ec91c40f46e842390a214c00d7bf6dfd95996bd43ccee1 SHA512 7bd65b46ec9e64974592477218f74535c1c2b8d8ebe5cba3f5c396cdcba1f61a4a0a7ae6ad20164dd21deb8d0a56418847d15c70d17909f9f980bd3e03dae8b9 WHIRLPOOL 654e79ef5bb04888ecd1391c467f96c45b8b8d6cfa12dcdde198396bb05d5e2202bb328ed676f48fae56d0a2e6a061f5c93a4acc979535ff8f70ab255e1bba74
+AUX graylog2.initd-r2 1300 SHA256 fcc2a852af707122f3ad391492e13c43ceb4081c0d96a282f60000d1c51c2d18 SHA512 d1fbc1be44671bbcc8ceaa03177ff0dab0d359ee0d9198d5fcb3194fcf1c59d1ecba9a4a533a7300eebc289fa1a85cd4cc7f901248055a7308583971b0ba4125 WHIRLPOOL f9a7257ee97303102a440927371565480e3fe00b9287166ad59e49bed9b5485e4927f12e8bec9616b4b3a192d10dff4f4686db950f5974965596d2fdc574c55b
+DIST graylog2-server-0.9.4p1.tar.gz 445411 SHA256 c29ef01766dbda9b0418a32cc384680273de7fea48b984f9c5eb7f288356a5a0 SHA512 82e4b043bab7a8660de5f97512e43bfd76722d22e177331c92ba29ba3f45faa67da21c1246d0695f6f38a301e27cc5bcffcfffed7a171875bb3f1f4642fd8483 WHIRLPOOL e709eda9ec671d5426bc864fb379782961b9006760f53dd88ac138ae3fdfe924e9bf9bf3c93cb759aaa685dbb3952077b0d44db7897ae1d223bfb95eb8068d13
+DIST graylog2-server-0.9.6.tar.gz 9006904 SHA256 a9a1417954145d4375d66cc16a45fce28a12b84e5ce8e90afed223d60c6ad2ad SHA512 0a74203fa789e879a88f98eca26fdc3dfd436958199e7404dc148c2176351d27222f4a647ce63e4044cae5efedc35b5c1634d12713f543b6c942a485109eabfc WHIRLPOOL 13a632721fc93f11350a8b82a7b025ab593f464cc29babb3a906b0259b638f541c54ff3209fcf1c72b65f8f95640a4c0ec544edba3a7a50efc24396c1d454348
+EBUILD graylog2-0.9.4_p1-r1.ebuild 1183 SHA256 2b75b133dfed7d8cbe354a412e920ecd62d2577b2ed9d7b6b24c92ce7d1d7600 SHA512 22cc5dad1f740a074da7a2b37621ebedefd6253f1ebecbb835082356f380c2dd498649a53d54cd9a98fd40409ea84040a157e7fc78f23a6d25006e5e6c79e9b6 WHIRLPOOL 58e10c84760f131ac68650126d2fac5c7b1336d4ab8201b858206ea2a21a900df670a56bc91647d1dad14a634d796f7803f8737c9eae757ea12ad84181004ab7
+EBUILD graylog2-0.9.6.ebuild 1193 SHA256 7d82cb376b668481e87700a2af4e76c6bebbacb9539059d190c53fc8d607c6c9 SHA512 cb39bfd4c144330b8b9cad444ffa5505b0b616e1bd73c8046a91f3abe9445b4a0b1bccacca3d2d8710ea094b05e773f64c6d1f66adff1660b15d28aead14bb57 WHIRLPOOL 4a5648d6536bbb080baa3ed799a2ad92c0442da7691b3d78f69b310d2ed85e35ce7df7711f045fe5a8c8aa3556684f5e63abdbc27611f481972e1af10ac5df3f
+MISC ChangeLog 2195 SHA256 0a3c1b95ae9c84a57380e2ddb9b4f05438c9a55bcf399e92d4a56e531fb17e98 SHA512 d817a43a60adb3f7a84b7d339c5f79f2d40b8798fab386fcf0c5e8e5f63cc202efb707cc7aa1b0bbeb5d1c56a954ee948ea7ff8a748944b57aa54425a6473a14 WHIRLPOOL 31254d48e9797cebf4167a47f6e4a3f8f4d62c78abb4669680507cdd307b1ac7d933b8ffea8c5bc13433bcfa351a9fd52ada4f1646d15b40fa6521e7f5279634
+MISC metadata.xml 353 SHA256 24fc5e02d0ce10ab5cbc207c0ea06d4d0c0d88e8d7a316f0ac35dc6badc6b288 SHA512 7dabd74d04bfa6f14a83e53034ace9efff317b83acb85d7ead4b45daea9422566c39cb5d0b26badfcc2ace0e31f1030a00e4453e8f8143fc66a721cdc2b534c6 WHIRLPOOL 947d81476711c6ef508cf2a4a386bb2b50b241595f132548bc1e78996cdc5787299dcb1852905fe4f078867a9df247a1f56b11b49354dcc61f3a2a5538453a26
