@@ -1,0 +1,1 @@
+GRAYLOG2_PID="/var/run/graylog2.pid"
