@@ -2,11 +2,18 @@
 
 GRAYLOG2_CONF="/etc/graylog2.conf"
 GRAYLOG2_LOG="/var/log/graylog2.log"
-GRAYLOG2_PID="/tmp/graylog2.pid"
+
+_removepid() {
+	rm -f ${GRAYLOG2_PID} > /dev/null 2>&1
+}
+
+depend() {
+	after logger
+}
 
 start() {
 	if [ ! -e ${GRAYLOG2_CONF} ]; then
-		eerror "${GRAYLOG2_CONF} does not exist; cannot start ${SVCNAME}"
+		eerror "${GRAYLOG2_CONF} does not exist; cannot start Graylog2"
 		return 1
 	fi
 
@@ -16,13 +23,14 @@ start() {
 		--stdout ${GRAYLOG2_LOG} \
 		--pidfile ${GRAYLOG2_PID} \
 		--chdir /usr/share/graylog2 \
-		--exec java -- -jar graylog2-server.jar
+		--exec java -- -jar graylog2-server.jar \
+			--pidfile ${GRAYLOG2_PID}
 	
 	# There's no way to know if anything went wrong, so the only
 	# thing we can do is wait and see if it's running afterwards
-	sleep 5
-
-	graylog2_test || return 1
+	sleep 3
+	graylog2_test
+	eend ${?} || return 1
 }
 
 stop() {
@@ -30,13 +38,15 @@ stop() {
 	start-stop-daemon --stop \
 		--pidfile ${GRAYLOG2_PID}
 	
-	rm -f ${GRAYLOG2_PID} # just in case
+	eend ${?}
+
+	_removepid # just in case
 }
 
 graylog2_test() {
 	# Graylog2 only deletes its PID file if it hits a config error
 	if [ ! -e ${GRAYLOG2_PID} ]; then
-		eerror "Configuration error, check ${GRAYLOG2_CONF}"
+		eerror "Configuration problem, check ${GRAYLOG2_CONF} and ${GRAYLOG2_LOG}"
 		return 1
 	fi
 	
@@ -45,9 +55,9 @@ graylog2_test() {
 	# Graylog2 isn't running, so that means there was a problem
 	if [ ! -e /proc/${PID} ]; then
 		eerror "Something went wrong, check ${GRAYLOG2_LOG}"
-		rm -f ${GRAYLOG2_PID}
+		_removepid
 		return 1
-	else
-		return 0
 	fi
+
+	return 0
 }
